--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-python": "^6.2.1",
     "@supabase/supabase-js": "^2.87.1",
     "@uiw/react-codemirror": "^4.25.3",
     "axios": "^1.13.2",
